# hs-minesweeper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  konstminesweeper.cabal
app/: Main.hs
