cabal-version:   3.0
name:            konstminesweeper
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      konstantin.astafurov@gmail.com
author:          Konstantin Astafurov
synopsis:        i made minesweeper
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable konstminesweeper
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        sdl2,
        mtl,
        array,
        distributive,
        random,
        containers
